--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -5,19 +5,21 @@
 
 .nav-link {
     text-decoration: none;
-    color: white;
-    text-decoration-color: white;
+    color: white !important;
+}
+
+.nav-link:active {
+    color: inherit;
+    background-color: transparent;
+    text-decoration: none;
 }
 
 
-.nav-link.active {
-    color: white;
-}
 
-.nav-link:focus {
-    outline: none;
-}
-
+.nav-link:focus,
 .nav-link:hover {
     transform: translateY(-3px);
+    text-decoration: none;
+    color: white !important;
+    outline: none;
 }
