--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,7 +1,10 @@
 .friends-list-background {
     background-image: url(../../src/assets/povship.gif);
     height: 100vh;
+    width: 100%;
+    background-size: cover;
 }
+
 
 .home-background {
     background-image: url(../../src/assets/povship.gif);
@@ -18,10 +21,25 @@
     height: 100vh;
 }
 
-.about-background{
+.about-background {
     background-image: url(../../src/assets/povship.gif);
     height: 100vh;
 }
 
+.fade-in-out {
+    animation: fade-in-out 3s ease-in-out infinite;
+}
 
+@keyframes fade-in-out {
+    0% {
+        opacity: 0;
+    }
 
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
