--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,3 +1,9 @@
+
+@font-face {
+    font-family: 'Press Start 2P';
+    src: url('../fonts/PressStart2P-Regular.ttf') format('truetype');
+}
+
 .friends-list-background {
     background-image: url(../../src/assets/povship.gif);
     height: 100vh;
