--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Press Start 2P';
+    src: url('../fonts/PressStart2P-Regular.ttf') format('truetype');
+}
+
 .nav-tabs {
     background-color: black;
     color: white;
